test/trivial/deitz/test_coerce_param.good
test_coerce_param.chpl:1: error: Initializing parameter 'x' to value not known at compile time
