test/trivial/deitz/test_coerce_param.chpl
param x : real = 1;

writeln(x);
